--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,16 @@
   flex-direction: column;
   align-items: center;
 }
+
+button {
+  width: 150px;
+  height: 50px;
+  background-color: aquamarine;
+  border: 3px solid blue;
+  font-size: large;
+}
+
+button:hover{
+  background-color: green;
+  color: white;
+}
