--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,47 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  text-shadow: 0 0 4px blue;
+}
+
+.choices {
+  display: flex;
+  width: 80vw;
+  justify-content: space-around;
+  margin-top: 200px;
+  position: absolute;
+  z-index: 1;
+}
+
+.playerImg,
+.computerImg {
+  display: flex;
+  width: auto;
+  justify-content: space-between;
+  background: orange;
+  padding: 20px;
+  border: solid black 5px;
+  border-radius: 5px;
+  max-height: 90px;
+}
+
+img {
+  width: 90px;
+  height: 90px;
+}
+
+.pImg:hover {
+  cursor: pointer;
+  width: 110px;
+  height: 110px;
+  background-color: yellow;
+}
+
 .reset {
   display: none;
 }
