--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,6 @@ body {
   height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
-  text-shadow: 0 0 4px blue;
-}
-
-.choices {
-  display: flex;
-  width: 80vw;
-  justify-content: space-around;
-  margin-top: 200px;
-  position: absolute;
-  z-index: 1;
 }
 
 .playerImg,
@@ -42,6 +32,32 @@ img {
   background-color: yellow;
 }
 
+.active {
+  width: 110px;
+  height: 110px;
+}
+
+.winner {
+  width: 100%;
+}
+
 .reset {
   display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: blueviolet;
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.reset:hover {
+  cursor: pointer;
+}
+
+.winnerDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
